Fix alignments of elements

--- a/client/app/pages/ml/ml.component.scss
+++ b/client/app/pages/ml/ml.component.scss
@@ -5,13 +5,6 @@
   margin: 0 5px;
 }
 
-form {
-  text-align: center;
-  .mat-form-field {
-    margin-left: 15px;
-  }
-}
-
 agm-map {
   height: 100%;
   width: 100%;
@@ -25,16 +18,14 @@ agm-map {
 }
 
 .calc-button {
-  width: 100px;
+  width: 100%;
   height: 44px;
   border-radius: 22px;
   font-family: Heebo;
 }
 
 #calc-button-div {
-  padding-left: 17px;
-  width: 100%;
-  padding-right: 5px;
+  width: 95%;
 }
 
 #app-table {
