--- a/client/styles.scss
+++ b/client/styles.scss
@@ -1,139 +1,141 @@
 /* You can add global styles to this file, and also import other style files */
 
-@import 'reset';
-@import 'variables';
-@import '../node_modules/font-awesome/scss/font-awesome';
-@import 'theme';
-@import '~ngx-bar-rating/themes/br-fontawesome-theme.css';
-@import url('https://fonts.googleapis.com/css?family=Heebo:300,400,500,700,900');
-@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400,500,700,900');
+@import "reset";
+@import "variables";
+@import "../node_modules/font-awesome/scss/font-awesome";
+@import "theme";
+@import "~ngx-bar-rating/themes/br-fontawesome-theme.css";
+@import url("https://fonts.googleapis.com/css?family=Heebo:300,400,500,700,900");
+@import url("https://fonts.googleapis.com/css?family=Open+Sans:300,400,500,700,900");
 
 * {
-    font-family: 'Open Sans', 'Heebo' ,serif;
+  font-family: "Open Sans", "Heebo", serif;
 }
 
 body {
-    margin: 0;
+  margin: 0;
 }
 
 .col-centered {
-    float: none;
-    margin: 0 auto;
+  float: none;
+  margin: 0 auto;
 }
 
 .center {
-    text-align: center;
+  text-align: center;
 }
-
 
 /* Colors */
 
 .errorCol {
-    color: $errorCol;
+  color: $errorCol;
 }
 
-
 /* MATERIAL OVERRIDES */
-
 
 /* MatSnackbar */
 
 .mat-snack-bar-container.success {
-    background-color: $successCol;
-    color: $whiteCol;
+  background-color: $successCol;
+  color: $whiteCol;
 }
 
 .mat-snack-bar-container.danger {
-    background-color: $errorCol;
-    color: $whiteCol;
+  background-color: $errorCol;
+  color: $whiteCol;
 }
 
 .mat-snack-bar-container.primary {
-    background-color: $primaryCol;
-    color: $whiteCol;
+  background-color: $primaryCol;
+  color: $whiteCol;
 }
 
 .mat-simple-snackbar-action {
-    color: $whiteCol;
+  color: $whiteCol;
 }
 
 .mat-table {
-    overflow: auto;
-    max-height: 500px;
+  overflow: auto;
+  max-height: 500px;
 }
 
 #app-table {
-    padding-top: 0px;
-    padding-right: 0px;
-    padding-left: 0px;
-    display: block;
-    max-width: 90%;
+  padding-top: 0px;
+  padding-right: 0px;
+  padding-left: 0px;
+  display: block;
+  max-width: 90%;
 }
 
-.logo{
-    align-content: center;
-    display: block;
-    height: 40px;
-    margin-left: auto;
-    margin-right: auto;
+.logo {
+  align-content: center;
+  display: block;
+  height: 40px;
+  margin-left: auto;
+  margin-right: auto;
 }
-
 
 .page-header {
-    text-align: center;
-    height: 80px;
-    width: 100%;
-    background-color: #6444a6;
-    font-family: Heebo;
-    font-size: 24px;
-    font-weight: bold;
-    font-style: normal;
-    font-stretch: normal;
-    line-height: 1.46;
-    letter-spacing: normal;
-    text-align: center;
-    color: #ffffff;
-    display: flex;
-    justify-content: center; /* align horizontal */
-    align-items: center;
+  text-align: center;
+  height: 80px;
+  width: 100%;
+  background-color: #6444a6;
+  font-family: Heebo;
+  font-size: 24px;
+  font-weight: bold;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: 1.46;
+  letter-spacing: normal;
+  text-align: center;
+  color: #ffffff;
+  display: flex;
+  justify-content: center; /* align horizontal */
+  align-items: center;
+}
+.appcontainer {
+  width: 100%;
+}
+
+form {
+  text-align: center;  
+  .mat-form-field {
+    width:90%;
   }
-  .appcontainer {
-    width: 100%;
-  }
-  
+}
+
 #param-item {
-    width: 90%;
-  }
+  width: 90%;
+  align-items: center;
+  display: flex;
+  justify-content: center; /* align horizontal */
   
-  .ml-list{
-    margin-right: 20px;
-  }
-  
-  .calc-price {
-    font-family: Heebo;
-    font-size: 42px;
-    font-weight: bold;
-    font-style: normal;
-    font-stretch: normal;
-    line-height: 1.48;
-    letter-spacing: normal;
-    text-align: center;
-    color: #734fbe;
-  }
-  
-  .calc-info {
-    font-family: Heebo;
-    font-size: 14px;
-    font-weight: 300;
-    font-style: normal;
-    font-stretch: normal;
-    line-height: 1.5;
-    letter-spacing: normal;
-    text-align: center;
-    color: #734fbe;
-  }
-  
-  .calc-div {
-    height: 90px;
-  }
-  
+}
+
+.calc-price {
+  font-family: Heebo;
+  font-size: 42px;
+  font-weight: bold;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: 1.48;
+  letter-spacing: normal;
+  text-align: center;
+  color: #734fbe;
+}
+
+.calc-info {
+  font-family: Heebo;
+  font-size: 14px;
+  font-weight: 300;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: 1.5;
+  letter-spacing: normal;
+  text-align: center;
+  color: #734fbe;
+}
+
+.calc-div {
+  height: 90px;
+}
